html template card functionality

--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./dist/style.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+    integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body>
     <header>
@@ -19,7 +22,7 @@
     <div class="manager">
         <div class="card" style="width: 20rem;">
             <div class="card-body">
-                <div class="card-header bg-primary text-white">
+                <div class="card-header Helvetica Neue, Helvetica, Arial, sans-serif">
                 <h4 class="card-title"><span class="material-icons">local_cafe</span>Jared</h4>
                 <h5 class="card-subtitle mb-2">Manager</h5>
                 </div>
@@ -34,9 +37,9 @@
 </section><section>
         <div class="container">
             <div class="engineer">
-                <div class="card" style="width: 18rem;">
+                <div class="card" style="width: 20rem;">
                     <div class="card-body">
-                        <div class="card-header bg-primary text-white">
+                        <div class="card-header card-header Helvetica Neue, Helvetica, Arial, sans-serif">
                         <h4 class="card-title"><span class="material-icons">engineering</span>Alec</h4>
                         <h5 class="card-subtitle mb-2">Engineer</h5>
                         </div>
@@ -52,10 +55,10 @@
     <section>
         <div class="container">
             <div class="intern">
-                <div class="card" style="width: 18rem;">
+                <div class="card" style="width: 20rem;">
                     <div class="card-body">
-                        <div class="card-header bg-primary text-white">
-                        <h4 class="card-title"><span class="material-icons">school</span>john</h4>
+                        <div class="card-header card-header Helvetica Neue, Helvetica, Arial, sans-serif">
+                        <h4 class="card-title"><span class="material-icons">school</span>John</h4>
                         <h5 class="card-subtitle mb-2">Intern</h5>
                         </div>
                         <p></p>
