--- a/index.html
+++ b/index.html
@@ -23,37 +23,35 @@
         <div class="card" style="width: 20rem;">
             <div class="card-body">
                 <div class="card-header bg-primary text-white">
-                <h4 class="card-title"><span class="material-icons">local_cafe</span>jjj</h4>
+                <h4 class="card-title"><span class="material-icons">local_cafe</span>Kelsie Szost</h4>
                 <h5 class="card-subtitle mb-2">Manager</h5>
                 </div>
                 <p></p>
-                <h6 class="card-text">ID: jjjj</h6>
-                <h6 class="card-text">Email: <a href="mailto:jjjj">jjjj</a></h6>
+                <h6 class="card-text">ID: 100</h6>
+                <h6 class="card-text">Email: <a href="mailto:owner@kelsieszost.design">owner@kelsieszost.design</a></h6>
                 <h6 class="card-text">Office Number: undefined</h6>
             </div>
         </div>
     </div>
 </div>
-</section>
-<section>
-    <div class="container">
-        <div class="intern">
-            <div class="card" style="width: 18rem;">
-                <div class="card-body">
-                    <div class="card-header bg-primary text-white">
-                    <h4 class="card-title"><span class="material-icons">school</span>jjj</h4>
-                    <h5 class="card-subtitle mb-2">Intern</h5>
+</section><section>
+        <div class="container">
+            <div class="engineer">
+                <div class="card" style="width: 20rem;">
+                    <div class="card-body">
+                        <div class="card-header bg-primary text-white">
+                        <h4 class="card-title"><span class="material-icons">engineering</span>Matthew Lovell</h4>
+                        <h5 class="card-subtitle mb-2">Engineer</h5>
+                        </div>
+                        <p></p>
+                        <h6 class="card-text">ID: 200</h6>
+                        <h6 class="card-text">Email: <a href="mailto:matthewlovell@gmail.com">matthewlovell@gmail.com</a></h6>
+                        <h6 class="card-text">GitHub: <a href="https://github.com/github/matthew" target="_blank" rel="noopener noreferrer">github/matthew</a></h6>
                     </div>
-                    <p></p>
-                    <h6 class="card-text">ID: jjjj</h6>
-                    <h6 class="card-text">Email: <a href="mailto:jjj">jjj</a></h6>
-                    <h6 class="card-text">School: jjj</h6>
                 </div>
             </div>
         </div>
-    </div>
-</section>
-
+    </section>
 </div>
 </main> 
 </body>
