readme updated with links

--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
                 <h5 class="card-subtitle mb-2">Manager</h5>
                 </div>
                 <p></p>
-                <h6 class="card-text">789</h6>
+                <h6 class="card-text">223</h6>
                 <h6 class="card-text">Email: <a href="owner@kelsieszost.design">owner@kelsieszost.design</a></h6>
-                <h6 class="card-text">Office Number:undefined</h6>
+                <h6 class="card-text">Office Number:223</h6>
             </div>
         </div>
     </div>
@@ -53,9 +53,9 @@
                         <h5 class="card-subtitle mb-2">Engineer</h5>
                         </div>
                         <p></p>
-                        <h6 class="card-text">789</h6>
+                        <h6 class="card-text">443</h6>
                         <h6 class="card-text">Email: <a href="mailto:matthew@gmail.com">matthew@gmail.com</a></h6>
-                        <h6 class="card-text">GitHub: <a href="github/matthewlovell" target="_blank" rel="noopener noreferrer">github/matthewlovell</a></h6>
+                        <h6 class="card-text">GitHub: <a href="github/matthew" target="_blank" rel="noopener noreferrer">github/matthew</a></h6>
                     </div>
                 </div>
             </div>
@@ -67,19 +67,36 @@
         <div class="card" style="width: 20rem;">
             <div class="card-body">
                 <div class="card-header bg-primary text-white Helvetica Neue, Helvetica, Arial, sans-serif">
-                <h4 class="card-title"><span class="material-icons">school</span>Taylor Szost</h4>
+                <h4 class="card-title"><span class="material-icons">school</span>Morgan Szost</h4>
                 <h5 class="card-subtitle mb-2">Intern</h5>
                 </div>
                 <p></p>
                 <h6 class="card-text">ID: 7</h6>
-                <h6 class="card-text">Email: <a href="taylor@gmail.com">taylor@gmail.com</a></h6>
-                <h6 class="card-text">School: MSU</h6>
+                <h6 class="card-text">Email: <a href="morgan@gmail.com">morgan@gmail.com</a></h6>
+                <h6 class="card-text">School: Michigan State University</h6>
             </div>
         </div>
     </div>
 </div>
 </section>
-
+<section>
+        <div class="container">
+            <div class="engineer">
+                <div class="card" style="width: 20rem;">
+                    <div class="card-body">
+                        <div class="card-header bg-primary text-white Helvetica Neue, Helvetica, Arial, sans-serif">
+                        <h4 class="card-title"><span class="material-icons">engineering</span>Marcus Lots</h4>
+                        <h5 class="card-subtitle mb-2">Engineer</h5>
+                        </div>
+                        <p></p>
+                        <h6 class="card-text">889</h6>
+                        <h6 class="card-text">Email: <a href="mailto:marcus@gmail.com">marcus@gmail.com</a></h6>
+                        <h6 class="card-text">GitHub: <a href="github/marcus" target="_blank" rel="noopener noreferrer">github/marcus</a></h6>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
     </div>
     </main>
     </body>
